Fixed the misalignment between the two sections

--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ body {
 }
 
 .applicant-details {
-    padding: 5% 10%;
-    padding-bottom: 0;
+    padding: 15px 10%;
 }
 
 .applicant-details .info img {
